force-app/main/default/objects/ZObj1__c/ZObj1__c.object-meta.xml
<CustomObject>
    <label>ZObj1</label>
    <nameField>
        <label>ZObj1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ZObj1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>