force-app/main/default/objects/ZObj1__c/fields/Field2__c.field-meta.xml
<CustomField>
    <fullName>Field2__c</fullName>
    <label>Field2</label>
    <type>Email</type>
</CustomField>