force-app/main/default/objects/ZObj1__c/fields/Field3__c.field-meta.xml
<CustomField>
    <fullName>Field3__c</fullName>
    <label>Field3</label>
    <length>6</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>